--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.daedafusion</groupId>
     <artifactId>security-framework</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <name>DaedaFusion Security Framework</name>
     <url>http://daedafusion.com</url>
